--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.6.5",
+    "img-loader": "^1.3.1",
     "imports-loader": "^0.6.5",
     "node-sass": "^3.10.1",
     "pug": "^2.0.0-beta6",
