--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "ppc-report",
+  "name": "christmas-hat-challenge",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --progress --inline --hot",
+    "share": "webpack-dev-server --inline --hot --host 10.8.21.149",
     "build": "webpack --progress --colors -p --config webpack.config.prod.js"
   },
   "author": "",
