--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "babel-preset-react": "^6.16.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.25.0",
+    "express": "^4.16.2",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.6.5",
     "img-loader": "^1.3.1",
     "imports-loader": "^0.6.5",
+    "morgan": "^1.9.0",
     "node-sass": "^3.10.1",
     "pug": "^2.0.0-beta6",
     "pug-loader": "^2.3.0",
