--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --progress --inline --hot",
-    "build": "webpack --progress --colors -p --config webpack.config.prod.js"
+    "devl": "webpack-dev-server --progress --inline --hot",
+    "build": "webpack --progress --colors -p --config webpack.config.prod.js",
+    "bundle":"webpack --config webpack.config.prod.js",
+    "start":"node server/"
   },
   "author": "",
   "license": "ISC",
@@ -22,29 +24,30 @@
     "html-webpack-plugin": "^2.6.5",
     "img-loader": "^1.3.1",
     "imports-loader": "^0.6.5",
-    "morgan": "^1.9.0",
     "node-sass": "^3.10.1",
     "pug": "^2.0.0-beta6",
     "pug-loader": "^2.3.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
-    "webpack": "^2.1.0-beta.27",
     "webpack-dev-server": "^2.1.0-beta.11"
   },
   "dependencies": {
     "babel-polyfill": "^6.16.0",
     "classnames": "^2.2.5",
     "eve": "^0.4.2",
+    "express": "^4.16.2",
     "flexboxgrid": "^6.3.1",
     "jquery": "^3.1.1",
     "material-ui": "^0.16.4",
     "moment": "^2.15.2",
+    "morgan": "^1.9.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-flexbox-grid": "^0.10.2",
     "react-flip-move": "^2.6.0",
     "react-tap-event-plugin": "^2.0.1",
     "roboto-fontface": "^0.6.0",
-    "snapsvg-cjs": "0.0.4"
+    "snapsvg-cjs": "0.0.4",
+    "webpack": "^2.1.0-beta.27"
   }
 }
