--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jquery": "^3.1.1",
     "material-ui": "^0.16.4",
     "moment": "^2.15.2",
+    "particles.js": "^2.0.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-flexbox-grid": "^0.10.2",
