--- a/package.json
+++ b/package.json
@@ -1,50 +1,47 @@
 {
   "name": "christmas-hat-challenge",
-  "version": "1.0.0",
-  "description": "",
+  "version": "\\",
+  "description": "\\",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --progress --inline --hot",
     "share": "webpack-dev-server --inline --hot --host 10.8.21.149",
-    "build": "webpack --progress --colors -p --config webpack.config.prod.js"
+    "build": "cross-env NODE_ENV=production webpack -p"
   },
-  "author": "",
+  "author": "Cory Loeffelman <Cloeffelman@shelterinsurance.com>",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-3": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.25.0",
-    "file-loader": "^0.9.0",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.6.5",
-    "img-loader": "^1.3.1",
-    "imports-loader": "^0.6.5",
-    "node-sass": "^3.10.1",
+    "img-loader": "^2.0.0",
+    "imports-loader": "^0.7.1",
+    "node-sass": "^4.7.2",
     "pug": "^2.0.0-beta6",
     "pug-loader": "^2.3.0",
-    "sass-loader": "^4.0.2",
-    "style-loader": "^0.13.1",
-    "webpack": "^2.1.0-beta.27",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.8.1",
     "webpack-dev-server": "^2.1.0-beta.11"
   },
   "dependencies": {
     "babel-polyfill": "^6.16.0",
     "classnames": "^2.2.5",
-    "eve": "^0.4.2",
-    "flexboxgrid": "^6.3.1",
+    "cross-env": "^5.1.1",
+    "eve": "^0.5.4",
     "jquery": "^3.1.1",
-    "material-ui": "^0.16.4",
     "moment": "^2.15.2",
     "particles.js": "^2.0.0",
-    "react": "^15.4.0",
-    "react-dom": "^15.4.0",
-    "react-flexbox-grid": "^0.10.2",
-    "react-flip-move": "^2.6.0",
-    "react-tap-event-plugin": "^2.0.1",
-    "roboto-fontface": "^0.6.0",
-    "snapsvg-cjs": "0.0.4"
-  }
+    "path": "^0.12.7",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
+  },
+  "repository": "https://github.com/cloeffelman/ChristmasHatChallenge.git"
 }
