--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --progress --inline --hot",
     "share": "webpack-dev-server --inline --hot --host 10.8.21.149",
+    "server": "node src/server",
     "build": "cross-env NODE_ENV=production webpack -p"
   },
   "author": "Cory Loeffelman <Cloeffelman@shelterinsurance.com>",
@@ -36,6 +37,7 @@
     "classnames": "^2.2.5",
     "cross-env": "^5.1.1",
     "eve": "^0.5.4",
+    "express": "^4.16.2",
     "jquery": "^3.1.1",
     "moment": "^2.15.2",
     "particles.js": "^2.0.0",
