--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack-dev-server": "^2.1.0-beta.11"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-polyfill": "^6.16.0",
     "classnames": "^2.2.5",
     "cross-env": "^5.1.1",
